--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "middleware": "^1.0.0",
     "mongodb": "^3.6.1",
     "mongoose": "^5.10.2",
     "request": "^2.88.2"
