--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Messenger bot in Node.js.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/server.js"
+    "test": "jest",
+    "start": "nodemon --exec babel-node src/server.js",
+    "build": "babel ./src --out-dir ./build --presets=@babel/env"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "author": "Gabriel Arghire and Hary Pham",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -34,8 +36,12 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^26.3.0",
     "babel-preset-env": "^1.7.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4"
   }
 }
