--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Gabriel Arghire and Hary Pham",
   "license": "ISC",
   "dependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -42,6 +43,11 @@
     "babel-jest": "^26.3.0",
     "babel-preset-env": "^1.7.0",
     "jest": "^26.4.2",
+    "mongodb-memory-server": "^6.7.1",
     "nodemon": "^2.0.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "preset": "@shelf/jest-mongodb"
   }
 }
