--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon --exec babel-node src/server.js",
-    "build": "babel ./src --out-dir ./build --presets=@babel/env"
+    "build": "babel ./src --out-dir ./build"
   },
   "repository": {
     "type": "git",
